--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -40,19 +40,39 @@
         </dd>
     </dl>
 </div>
-<div class="container w-100 h-100">
-    <div class="row align-items-center h-100">
-        <div class="col-xs-3">
-            <div>
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
+
+@using (Html.BeginForm())
+{
+    <div class="container w-100 h-100">
+        <div class="row align-items-center h-100">
+            <div class="col-xs-3">
+                <div>
+                    <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
+                </div>
             </div>
-        </div>
-        <div class="col-xs-6">
-        </div>
-        <div class="col-xs-3">
-            <div>
-                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Usuń</button>
+            <div class="col-xs-6">
+            </div>
+            <div class="col-xs-3">
+                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog modal-sm" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Potwierdź usunięcie</h4>
+                            </div>
+                            <div class="modal-body">
+                                Czy na pewno chcesz usunąć tę wiadomość?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+                                @*<button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("DeleteConfirmed", "Message", new { id = @Model.Id })'">Usuń</button>*@
+                                <input type="submit" value="Usuń" class="btn btn-danger" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
