--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -20,7 +20,9 @@
             </div>*@
 
         <div class="form-group">
-            Temat:
+            <div class="control-label col-md-2">
+                <strong>Temat</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
@@ -28,7 +30,9 @@
         </div>
 
         <div class="form-group">
-            Treść:
+            <div class="control-label col-md-2">
+                <strong>Treść</strong>
+            </div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
@@ -36,7 +40,9 @@
         </div>
 
         <div class="form-group">
-            Oznacz jako wiadomość systemową
+            <div class="control-label col-md-2">
+                <strong>Oznacz jako wiadomość systemową</strong>
+            </div>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.IsCyclical)
