--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -47,49 +47,53 @@
                 @Html.DropDownList("MessageType", (IEnumerable<SelectListItem>)ViewData["MessageTypes"], new { @onchange = "MessageTypeChanged(this.value)" })
             </div>
         </div>
-        <div id="conditional">
-            <div id="1" style="display: block">
-                Lista osób
+        <div id="1" class="form-group" style="display: block">
+            <div class="control-label col-md-2">
+                <strong>Użytkownik</strong>
             </div>
-            <div id="2" style="display: none">
-                Lista kursów
+            <div class="col-md-10">
+                @Html.DropDownList("User", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
             </div>
-            <div id="3" style="display: none">
-                Lista grup
+        </div>
+        <div id="2" class="form-group" style="display: none">
+            <div class="control-label col-md-2">
+                <strong>Grupa</strong>
             </div>
-            <div id="4" style="display: none">
-                Lista ról
+            <div class="col-md-10">
+                @Html.DropDownList("Course", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
+            </div>
+        </div>
+        <div id="3" class="form-group" style="display: none">
+            <div class="control-label col-md-2">
+                <strong>Kurs</strong>
+            </div>
+            <div class="col-md-10">
+                @Html.DropDownList("Group", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
+            </div>
+        </div>
+        <div id="4" class="form-group" style="display: none">
+            <div class="control-label col-md-2">
+                <strong>Rola</strong>
+            </div>
+            <div class="col-md-10">
+                @Html.DropDownList("Group", (IEnumerable<SelectListItem>)ViewData["MessageTypes"])
             </div>
         </div>
         <script>
             function MessageTypeChanged(Id)
             {
-                var conditionalDocuments = document.getElementById("conditional");
-
-                var allElements = conditionalDocuments.getElementsByTagName("*");
-
+                var element;
                 var i;
 
-                for (i = 0; i < allElements.length; i++) {
-                    allElements[i].style.display = "none";
+                for (i = 1; i <= 4; i++) {
+                    element = document.getElementById(i);
+
+                    element.style.display = "none";
                 }
 
                 var visibleElement = document.getElementById(Id);
 
                 visibleElement.style.display = "block";
-
-                //var x = document.getElementById(Id);
-
-                //if (x.style.display === "none") {
-                //    x.style.display = "block";
-                //} else {
-                //    x.style.display = "none";
-                //}
-                //switch (Id)
-                //{
-                //    case (1): window.location.href = "/Controller/Actionmethod?value=" + val;
-                //        break;
-                //}
             }
         </script>
         <div class="form-group">
