--- a/LanguageSchool/Views/Message/Create.cshtml
+++ b/LanguageSchool/Views/Message/Create.cshtml
@@ -11,40 +11,12 @@
 
     <div class="form-horizontal">
 
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Temat</strong>
-            </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Treść</strong>
-            </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             <div class="control-label col-md-2">
                 <strong>Typ wiadomości</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.MessageTypeId, Model.MessageTypes, new { @onchange = "MessageTypeChanged(this.value)" })
+                @Html.DropDownListFor(model => model.MessageTypeId, Model.MessageTypes, new { @class = "form-control", @onchange = "MessageTypeChanged(this.value)" })
             </div>
         </div>
         <div id="1" class="form-group" style="display: block">
@@ -52,7 +24,7 @@
                 <strong>Użytkownik</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.UserId, Model.Users)
+                @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
             </div>
         </div>
         <div id="2" class="form-group" style="display: none">
@@ -60,7 +32,7 @@
                 <strong>Grupa</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.GroupId, Model.Groups)
+                @Html.DropDownListFor(model => model.GroupId, Model.Groups, new { @class = "form-control" })
             </div>
         </div>
         <div id="3" class="form-group" style="display: none">
@@ -68,7 +40,7 @@
                 <strong>Kurs</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CourseId, Model.Courses)
+                @Html.DropDownListFor(model => model.CourseId, Model.Courses, new { @class = "form-control" })
             </div>
         </div>
         <div id="4" class="form-group" style="display: none">
@@ -76,7 +48,7 @@
                 <strong>Rola</strong>
             </div>
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.RoleId, Model.Roles)
+                @Html.DropDownListFor(model => model.RoleId, Model.Roles, new { @class = "form-control" })
             </div>
         </div>
         <script>
@@ -105,6 +77,26 @@
                     @Html.EditorFor(model => model.IsSystem)
                     @Html.ValidationMessageFor(model => model.IsSystem, "", new { @class = "text-danger" })
                 </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="control-label col-md-2">
+                <strong>Temat</strong>
+            </div>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Topic, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Topic, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="control-label col-md-2">
+                <strong>Treść</strong>
+            </div>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
             </div>
         </div>
 
