--- a/LanguageSchool/Views/User/Details.cshtml
+++ b/LanguageSchool/Views/User/Details.cshtml
@@ -5,63 +5,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Użytkownik</h2>
 
-<div>
-    <h4>User</h4>
+<div class="col-xs-12">
+    <h4>@Model.UserDatas.FirstOrDefault().Name @Model.UserDatas.FirstOrDefault().Surname</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
+    <div class="col-xs-4">
+        <label>
+            Login:
+        </label>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
+        @Html.DisplayFor(model => model.Login)
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreationDate)
-        </dt>
+    <div class="col-xs-4">
+        <div class="col-xs-6">
+            <label>                
+                Hasło:
+            </label>
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreationDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletionDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletionDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Login)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
-
-        <dd>
+        <div class="col-xs-6" id="placeholder" style="display: block">
+            ●●●●●●●●
+        </div>
+        <div class="col-xs-6" id="password" style="display: none">
             @Html.DisplayFor(model => model.Password)
-        </dd>
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Role.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Role.Name)
-        </dd>
-
-    </dl>
+    <div class="col-xs-4">
+        <label>
+            Pokaż hasło:
+        </label>
+        <input type="checkbox" onclick="showPassword()">
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<script>
+function showPassword() {
+    var placeholder = document.getElementById("placeholder");
+    var password = document.getElementById("password");
+
+    if (placeholder.style.display === "block") {
+        placeholder.style.display = "none";
+        password.style.display = "block";
+    } else {
+        placeholder.style.display = "block";
+        password.style.display = "none";
+    }
+}
+</script>
