--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col-xs-12">
-    <h4>@Model.Name @Model.Surname</h4>
-    <hr />
+<div class="row thumbnail col-xs-12">
     <div class="col-xs-4">
         <label>
             Login:
@@ -39,25 +37,9 @@
     </div>
 </div>
 
-<script>
-function showPassword() {
-    var placeholder = document.getElementById("placeholder");
-    var password = document.getElementById("password");
+<p/>
 
-    if (placeholder.style.display === "block") {
-        placeholder.style.display = "none";
-        password.style.display = "block";
-    } else {
-        placeholder.style.display = "block";
-        password.style.display = "none";
-    }
-}
-</script>
-
-<div class="col-xs-12">
-    <hr />
-    <h4>Dane użytkownika</h4>
-    <hr />
+<div class="row thumbnail col-xs-12">
     <dl class="dl-horizontal">
         <dt>
             Data utworzenia wpisu
@@ -149,6 +131,33 @@ function showPassword() {
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id })
-</p>
+
+<p />
+
+<div class="row align-items-center h-100">
+    <div class="col-xs-4">
+        <div>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("List", "UserData")'">Dane użytkowników</button>
+        </div>
+    </div>
+    <div class="col-xs-4">
+        <div>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
+        </div>
+    </div>
+</div>
+
+<script>
+function showPassword() {
+    var placeholder = document.getElementById("placeholder");
+    var password = document.getElementById("password");
+
+    if (placeholder.style.display === "block") {
+        placeholder.style.display = "none";
+        password.style.display = "block";
+    } else {
+        placeholder.style.display = "block";
+        password.style.display = "none";
+    }
+}
+    </script>
