--- a/LanguageSchool/Views/Material/Upload.cshtml
+++ b/LanguageSchool/Views/Material/Upload.cshtml
@@ -11,7 +11,9 @@
     
     <div class="form-horizontal thumbnail">
         <div class="form-group">
-            @Html.LabelFor(model => model.LessonSubjectId, "LessonSubjectId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">
+                <strong>Temat</strong>
+            </div>
             <div class="col-md-10">
                 @Html.DropDownList("LessonSubjectId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LessonSubjectId, "", new { @class = "text-danger" })
@@ -43,7 +45,24 @@
                 <strong>Plik</strong>
             </div>
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.File, null, new { type = "file", @class = "input-file", accept = ".pdf", id = "upload", onchange = "checkLength()" })
+                @Html.TextBoxFor(model => model.File, null, new { type = "file", @class = "input-file", accept = ".pdf", id = "upload", onchange = "checkFile()" })
+            </div>
+            <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Nieodpowiedni plik</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Wybrano niewłaściwy plik. Udostępniane dokumenty muszą być w formacie pdf, a ich maksymalny rozmiar wynosi 0,5 MB</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
 
@@ -64,11 +83,11 @@
     }
 
 <script>
-function checkLength() {
+function checkFile() {
     var upload = document.getElementById("upload");
 
-    if (upload.files[0].size > 524288) {
-       alert("Wybrany plik ma nieodpowiedni rozmiar. Maksymalny rozmiar to 0,5 MB");
+    if (upload.files[0].size > 512000) {
+        $("#myModal").modal();
        upload.value = "";
     };
 };
