--- a/LanguageSchool/Views/Material/Index.cshtml
+++ b/LanguageSchool/Views/Material/Index.cshtml
@@ -20,7 +20,6 @@
             <th>
                 Komentarz
             </th>
-            <th></th>
         </tr>
 
         @foreach (var item in Model)
@@ -39,7 +38,7 @@
                     @Html.DisplayFor(modelItem => item.Comment)
                 </td>
                 <td>
-                    <a href="@Url.Action("Download", "Material", new { id = item.Id })">
+                    <a href="@Url.Action("Download", "Material", new { id = item.Id })" style = "color:black">
                         <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
                     </a>
                 </td>
