--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -175,9 +175,26 @@
                         <td>
                             @if (item.Comment != null)
                             {
-                                <label title=@item.Comment><span class="glyphicon glyphicon-comment"></span></label>
+                                <label data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-comment"></span></label>
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog modal-sm" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title" id="myModalLabel">Komentarz</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                @item.Comment
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             }
                         </td>
+
                     </tr>
                 }
 
