--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -126,6 +126,9 @@
         <table class="table table-striped table-bordered">
             <tr>
                 <th>
+                    Godziny
+                </th>
+                <th>
                     Poniedziałek
                 </th>
                 <th>
@@ -148,30 +151,48 @@
                 </th>
             </tr>
 
-            @**
-    foreach (var item in Model)
-    {
+            @for (int i = 8; i < 20; i++)
+            {
+                var currentHour = i + ".15";
+                var nextHour = (i + 1) + ".15";
+
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.CreationDate)
+                        <strong>@currentHour - @nextHour</strong>
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LessonSubject.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Comment)
-                    </td>
-                    <td>
-                        <a href="@Url.Action("Download", "Material", new { id = item.Id })" style="color:black">
-                            <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                        </a>
-                    </td>
+                    @for (int j = 1; j <= 7; j++)
+                    {
+                        <td>
+                            <button class="btn btn-default" />
+                        </td>
+                    }
                 </tr>
-            }*@
-        </table>
+            }
+
+                @**
+            foreach (var item in Model)
+            {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CreationDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LessonSubject.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Comment)
+                            </td>
+                            <td>
+                                <a href="@Url.Action("Download", "Material", new { id = item.Id })" style="color:black">
+                                    <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                                </a>
+                            </td>
+                        </tr>
+                    }*@
+</table>
     </div>
 
     <div class="form-group">
