--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -137,7 +137,7 @@
                 </th>
             </tr>
 
-            @for (int i = 8; i < 20; i++)
+            @*@for (int i = 8; i < 20; i++)
             {
                 var currentHour = i + ".15";
                 var nextHour = (i + 1) + ".15";
@@ -150,8 +150,22 @@
                         </td>
                     }
                 </tr>
+            }*@
+            @for (int i = 0; i < 12; i++)
+            {
+                var days = Model.UserWorkHours.ElementAt(i);
+                <tr>
+                    @for (int j = 0; j < 7; j++)
+                    {
+                        var currentHour = i + 8 + ".15";
+                        var nextHour = (i + 8 + 1) + ".15";
+                        <td>
+                            @*<button class="btn btn-default btn-block">@currentHour - @nextHour </button>*@
+                            @days[j] @currentHour - @nextHour
+                        </td>
+                    }
+                </tr>
             }
-
                 @**
             foreach (var item in Model)
             {
@@ -183,7 +197,7 @@
             <input type="submit" value="Utwórz" class="btn btn-default" />
         </div>
     </div>
-}
+            }
 
 <script>
     window.onload = RoleChanged();
