--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -109,67 +109,54 @@
                     @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
                 </div> 
             </div>
-            @*<div class="row form-group">
-                <div class="control-label col-md-2">
-                    <strong>Poniedziałek?</strong>
-                </div>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.Monday[2], new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-                <div class="control-label col-md-2">
-                    <strong>testcheck?</strong>
-                </div>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.testcheck, new { htmlAttributes = new { @class = "form-control" } })
-                </div>
-            </div>*@
         </div>
     </div>
     <div id="timetable" class="thumbnail" style="display: none">
-        <table class="table table-bordered">
-            <tr>
-                <th class="text-center">
-                    Poniedziałek
-                </th>
-                <th class="text-center">
-                    Wtorek
-                </th>
-                <th class="text-center">
-                    Środa
-                </th>
-                <th class="text-center">
-                    Czwartek
-                </th>
-                <th class="text-center">
-                    Piątek
-                </th>
-                <th class="text-center">
-                    Sobota
-                </th>
-                <th class="text-center">                    
-                    Niedziela
-                </th>
-            </tr>
-
-            @for (int i = 0; i < 12; i++)
-            {
-                var days = Model.UserWorkHours.ElementAt(i);
+        <div class="btn-group-toggle" data-toggle="buttons">
+            <table class="table table-bordered">
                 <tr>
-                    @for (int j = 0; j < 7; j++)
+                    <th class="text-center">
+                        Poniedziałek
+                    </th>
+                    <th class="text-center">
+                        Wtorek
+                    </th>
+                    <th class="text-center">
+                        Środa
+                    </th>
+                    <th class="text-center">
+                        Czwartek
+                    </th>
+                    <th class="text-center">
+                        Piątek
+                    </th>
+                    <th class="text-center">
+                        Sobota
+                    </th>
+                    <th class="text-center">
+                        Niedziela
+                    </th>
+                </tr>
+
+                @for (int i = 0; i < 12; i++)
+                {
+                    var days = Model.UserWorkHours.ElementAt(i);
+                    <tr>
+                        @for (int j = 0; j < 7; j++)
                     {
                         var currentHour = i + 8 + ".15";
                         var nextHour = (i + 8 + 1) + ".15";
-                        <td>
-                            @*<button class="btn btn-default btn-block">@currentHour - @nextHour </button>*@
-                            <label class="btn btn-default btn-block">
-                                @Html.EditorFor(model => model.UserWorkHours[i][j], new { htmlAttributes = new { @style = "display: none" } })
-                                @currentHour - @nextHour
-                            </label>
-                        </td>
-                    }
-                </tr>
-            }
-        </table>
+                            <td>
+                                <label class="btn btn-default btn-block"> @*checked*@
+                                    @Html.EditorFor(model => model.UserWorkHours[i][j], new { htmlAttributes = new { @style = "display: none" } })
+                                    @currentHour - @nextHour
+                                </label>
+                            </td>
+                        }
+                    </tr>
+                }
+            </table>
+        </div>
     </div>
 
     <div class="form-group">
@@ -177,22 +164,21 @@
             <input type="submit" value="Utwórz" class="btn btn-default" />
         </div>
     </div>
-}
-
-<script>
-    window.onload = RoleChanged();
-
-    function RoleChanged()
-    {
-        var TeacherRoleId = 3;
-
-        timetable = document.getElementById("timetable");
-
-        RoleId = document.getElementById("rolePicker").value;
-
-        if (RoleId == TeacherRoleId)
-            timetable.style.display = "block";
-        else
-            timetable.style.display = "none";
     }
-</script>
+
+    <script>
+        window.onload = RoleChanged();
+
+        function RoleChanged() {
+            var TeacherRoleId = 3;
+
+            timetable = document.getElementById("timetable");
+
+            RoleId = document.getElementById("rolePicker").value;
+
+            if (RoleId == TeacherRoleId)
+                timetable.style.display = "block";
+            else
+                timetable.style.display = "none";
+        }
+    </script>
