--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -10,14 +10,44 @@
 @using (Html.BeginForm())
 {
     <div class="container">
-        @Html.HiddenFor(model => model.CourseId)
+        @*@Html.HiddenFor(model => model.CourseId)
         @Html.HiddenFor(model => model.Points)
-        @Html.HiddenFor(model => model.ClosedQuestions)
+        @Html.HiddenFor(model => model.Name)
+        @Html.HiddenFor(model => model.Comment)*@
 
         <div class="row">
             <div class="bordered col-md-12">
                 <div class="form-group bordered col-md-6">
                     @for (int i = 0; i <= (Model.ClosedQuestions.Count / 2); i++)
+                    {
+                        @Html.HiddenFor(model => Model.ClosedQuestions[i].Points)
+                        @(i + 1 + "." + @Model.ClosedQuestions[i].Contents)
+
+                        <ul type="a">
+                            @for (int j = 0; j < Model.ClosedQuestions[i].Answers.Count; j++)
+                            {
+                                <li>
+                                    @Model.ClosedQuestions[i].Answers[j].Answer
+                                    @if (Model.ClosedQuestions[i].IsMultichoice)
+                                    {
+                                        @Html.CheckBoxFor(model => model.ClosedQuestions[i].Answers[j].IsMarked)
+                                        @*@Html.HiddenFor(model => Model.ClosedQuestions[i].Answers[j].IsCorrect)*@
+
+                                        @Html.CheckBox("ClosedQuestions[" + i + "].Answers[" + j + "]", Model.ClosedQuestions[i].Answers[j].IsMarked)
+                                    }
+                                    else
+                                    {
+                                        string id = "ClosedQuestions_" + i + "__Answers_" + j + "__IsMarked";
+                                        @Html.RadioButton(Model.ClosedQuestions[i].Id.ToString(), Model.ClosedQuestions[i].Answers[j].IsMarked, new { htmlAttributes = new { @id = id } })
+                                        @Html.HiddenFor(a => Model.ClosedQuestions[i].Answers[j].IsCorrect)
+                                    }
+                                </li>
+                            }
+                        </ul>
+                    }
+                </div>
+                <div class="form-group bordered col-md-6">
+                    @for (int i = (Model.ClosedQuestions.Count / 2) + 1; i < Model.ClosedQuestions.Count; i++)
                     {
                         @Html.HiddenFor(model => Model.ClosedQuestions[i].Points)
                         @(i + 1 + "." + @Model.ClosedQuestions[i].Contents)
@@ -42,33 +72,6 @@
                             }
                         </ul>
                     }
-                </div>
-                <div class="form-group bordered col-md-6">
-                    @*@for (int i = (Model.ClosedQuestions.Count / 2) + 1; i < Model.ClosedQuestions.Count; i++)
-                    {
-                        @Html.HiddenFor(model => Model.ClosedQuestions[i].Points)
-                        @(i + 1 + "." + @Model.ClosedQuestions[i].Contents)
-
-                        <ul type="a">
-                            @for (int j = 0; j < Model.ClosedQuestions[i].Answers.Count; j++)
-                            {
-                                <li>
-                                    @Model.ClosedQuestions[i].Answers[j].Answer
-                                    @if (Model.ClosedQuestions[i].IsMultichoice)
-                                    {
-                                        @Html.CheckBoxFor(model => model.ClosedQuestions[i].Answers[j].IsMarked)
-                                        @Html.HiddenFor(model => Model.ClosedQuestions[i].Answers[j].IsCorrect)
-                                    }
-                                    else
-                                    {
-                                        string id = "ClosedQuestions_" + i + "__Answers_" + j + "__IsMarked";
-                                        @Html.RadioButton(Model.ClosedQuestions[i].Id.ToString(), Model.ClosedQuestions[i].Answers[j].IsMarked, new { htmlAttributes = new { @id = id } })
-                                        @Html.HiddenFor(a => Model.ClosedQuestions[i].Answers[j].IsCorrect)
-                                    }
-                                </li>
-                            }
-                        </ul>
-                    }*@
                 </div>
             </div>
             <div class="row">
